testdata/baselines/reference/submodule/conformance/jsdocTemplateTagDefault.errors.txt
file.js(6,12): error TS8010: Type annotations can only be used in TypeScript files.
file.js(8,12): error TS8010: Type annotations can only be used in TypeScript files.
file.js(9,20): error TS2322: Type 'number' is not assignable to type 'string'.
file.js(10,12): error TS8010: Type annotations can only be used in TypeScript files.
file.js(12,12): error TS8010: Type annotations can only be used in TypeScript files.
file.js(13,21): error TS8004: Type parameter declarations can only be used in TypeScript files.
file.js(33,14): error TS2706: Required type parameters may not follow optional type parameters.
file.js(38,17): error TS2744: Type parameter defaults can only reference previously declared type parameters.
file.js(46,12): error TS8010: Type annotations can only be used in TypeScript files.
file.js(47,12): error TS8010: Type annotations can only be used in TypeScript files.
file.js(49,21): error TS8004: Type parameter declarations can only be used in TypeScript files.
file.js(53,14): error TS2706: Required type parameters may not follow optional type parameters.
file.js(54,12): error TS8010: Type annotations can only be used in TypeScript files.
file.js(55,12): error TS8010: Type annotations can only be used in TypeScript files.
file.js(57,21): error TS8004: Type parameter declarations can only be used in TypeScript files.
file.js(60,17): error TS2744: Type parameter defaults can only reference previously declared type parameters.
file.js(62,12): error TS8010: Type annotations can only be used in TypeScript files.
file.js(63,12): error TS8010: Type annotations can only be used in TypeScript files.


==== file.js (18 errors) ====
    /**
     * @template {string | number} [T=string] - ok: defaults are permitted
     * @typedef {[T]} A
     */
    
    /** @type {A} */ // ok, default for `T` in `A` is `string`
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const aDefault1 = [""];
    /** @type {A} */ // error: `number` is not assignable to string`
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const aDefault2 = [0];
                       ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    /** @type {A<string>} */ // ok, `T` is provided for `A`
               ~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const aString = [""];
    /** @type {A<number>} */ // ok, `T` is provided for `A`
               ~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const aNumber = [0];
                        
    
    
    /**
    ~~~
     * @template T
    ~~~~~~~~~~~~~~
     * @template [U=T] - ok: default can reference earlier type parameter
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @typedef {[T, U]} B
    ~~~~~~~~~~~~~~~~~~~~~~
     */
    ~~~
    
    
    /**
    ~~~
     * @template {string | number} [T] - error: default requires an `=type`
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @typedef {[T]} C
    ~~~~~~~~~~~~~~~~~~~
     */
    ~~~
    
    
    /**
    ~~~
     * @template {string | number} [T=] - error: default requires a `type`
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @typedef {[T]} D
    ~~~~~~~~~~~~~~~~~~~
     */
    ~~~
    
    
    /**
    ~~~
     * @template {string | number} [T=string]
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @template U - error: Required type parameters cannot follow optional type parameters
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                 ~
!!! error TS2706: Required type parameters may not follow optional type parameters.
     * @typedef {[T, U]} E
    ~~~~~~~~~~~~~~~~~~~~~~
     */
    ~~~
    
    
    /**
    ~~~
     * @template [T=U] - error: Type parameter defaults can only reference previously declared type parameters.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    ~
!!! error TS2744: Type parameter defaults can only reference previously declared type parameters.
     * @template [U=T]
    ~~~~~~~~~~~~~~~~~~
     * @typedef {[T, U]} G
    ~~~~~~~~~~~~~~~~~~~~~~
     */
    ~~~
    
    
    /**
    ~~~
     * @template T
    ~~~~~~~~~~~~~~
     * @template [U=T] - ok: default can reference earlier type parameter
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @param {T} a
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {U} b
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    ~~~
    function f1(a, b) {}
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
                        
    
    
     /**
    ~~~~
     * @template {string | number} [T=string]
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @template U - error: Required type parameters cannot follow optional type parameters
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                 ~
!!! error TS2706: Required type parameters may not follow optional type parameters.
     * @param {T} a
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {U} b
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    ~~~
    function f2(a, b) {}
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
                        
    
    
    /**
    ~~~
     * @template [T=U] - error: Type parameter defaults can only reference previously declared type parameters.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    ~
!!! error TS2744: Type parameter defaults can only reference previously declared type parameters.
     * @template [U=T]
    ~~~~~~~~~~~~~~~~~~
     * @param {T} a
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {U} b
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    ~~~
    function f3(a, b) {}
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    